FINP-1216 Fix sidebar on auth exception  - Unsurprisingly, this turns out to be a bit more complicated than    it would seem. The css which moves the sidebar down (.test-env #sidebar)    isn't applied because on that auth error, the #sidebar div is rendered in    parallel with #body div instead of as a child. I believe this is due to    some bad html which the browser is attempting to fix. The best solution    is probably to track down what is generating the bad html and fixing it.    That not going to be easy and there is no guarantee that there are not    other pages that cause similar issues. The quick solution is to add a css    selector for sibling #sidebar div. That seems to resolve it for this    particular page. It is possible that other broken html would cause    different rendering that would break the css, so ultimately it    probably makes sense to find and fix the bad html as well..

--- a/kfs-web/src/main/webapp/css/newPortal.css
+++ b/kfs-web/src/main/webapp/css/newPortal.css
@@ -310,6 +310,10 @@ nav ul.nav li {
     top: 100px;
 }
 
+.test-env ~ #sidebar {
+    top: 100px;
+}
+
 #sidebar > div {
     position: fixed;
     height: calc(100% - 100px);
